--- a/EnglishBattleApp.csproj
+++ b/EnglishBattleApp.csproj
@@ -276,11 +276,11 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Question\Question.cshtml" />
+    <Content Include="Views\Account\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Account\" />
-    <Folder Include="Views\Question\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
