--- a/Web.config
+++ b/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -60,8 +60,9 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-	<connectionStrings>
-		<add name="EnglishBattleEntities" connectionString="metadata=res://*/EnglishBattleModel.csdl|res://*/EnglishBattleModel.ssdl|res://*/EnglishBattleModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=GADOS-2\MSSQL2019;initial catalog=EnglishBattle;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+  <connectionStrings>
+    <add name="EnglishBattleEntities" connectionString="metadata=res://*/EnglishBattleModel.csdl|res://*/EnglishBattleModel.ssdl|res://*/EnglishBattleModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=GADOS-2\MSSQL2019;initial catalog=EnglishBattle;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
