--- a/EnglishBattleApp.csproj
+++ b/EnglishBattleApp.csproj
@@ -144,6 +144,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\login.css" />
+    <Content Include="Content\question.css" />
     <Content Include="Content\register.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
